--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,23 @@
-# O NOME DO ARQUIVO DEVE SER `.gitignore` (ATENTE-SE AO PONTO NO INÍCIO)
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# VSCode repo settings
-.vscode
-node_modules/
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
 .DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
